--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,21 @@
     <groupId>com.www</groupId>
     <artifactId>DesignPattern</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <build>
+        <finalName>spark.hadoop.study</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <showWarnings>true</showWarnings>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
